// Teleport
// Copyright (C) 2025 Gravitational, Inc.
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package teleport.lib.vnet.diag.v1;

option go_package = "github.com/gravitational/teleport/gen/proto/go/teleport/lib/vnet/diag/v1;diagv1";

// RouteConflict describes a conflict between a route set up by a 3rd-party app where the
// destination overlaps with a destination in a route set up by VNet.
message RouteConflict {
  // dest is the destination of the conflicting route.
  string dest = 1;
  // vnet_dest is the destination of a VNet route that Dest overlaps with.
  string vnet_dest = 2;
  // interface_name is the name of the interface the route uses, e.g. "utun4".
  string interface_name = 3;
  // interface_app may contain the name of the application responsible for setting up the interface.
  // At the moment, the only source of this information is NetworkExtension description included in
  // the output of `ifconfig -v <interface name>`. Not all VPN applications use this framework, so
  // it's likely to be empty.
  string interface_app = 4;
}
